--- a/src/components/headers/styles.scss
+++ b/src/components/headers/styles.scss
@@ -37,6 +37,24 @@
     font-weight: 500;
 
 }
-.usualText {
+.Text111 {
+    width: 332px;
+    height:18px;
+    color: #2b2d36;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight:400;
     
+}
+.firstLink {
+    color: #68d6f4;
+    font-family:"Roboto Madium" ;
+    font-weight:500;
+
+}
+.secondLink {
+    color: # 572f8c;
+    font-family:"Roboto Madium" ;
+    font-weight:500;
+
 }
