--- a/src/components/headers/styles.scss
+++ b/src/components/headers/styles.scss
@@ -37,7 +37,7 @@
     font-weight: 500;
 
 }
-.Text111 {
+.Text {
     width: 332px;
     height:18px;
     color: #2b2d36;
@@ -46,15 +46,31 @@
     font-weight:400;
     
 }
-.firstLink {
+.BaseLink {
     color: #68d6f4;
     font-family:"Roboto Madium" ;
     font-weight:500;
 
 }
-.secondLink {
+.Link {
     color: # 572f8c;
     font-family:"Roboto Madium" ;
     font-weight:500;
 
+}
+.Link Link--refreshed {
+    width: 258px;
+    height: 15px;
+    color: #c2c2c2;
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 400;
+}
+.secondLink {
+    width: 136px;
+    height: 16px;
+    color: #68d6f4;
+    font-family: "Roboto Medium";
+    font-size: 14px;
+    font-weight: 500;
 }
