--- a/src/components/ListProduct/styles.scss
+++ b/src/components/ListProduct/styles.scss
@@ -1,10 +1,33 @@
 .product-item{
     display: flex;
 }
-.btn {
-    width: 110px;
-    height: 35px;
-    background-color: #68d6f4;
-    border-radius: 7px;
-    color: white;
-  }
+
+.cart{
+	height:115px;
+}
+
+.image_cart{
+	margin:auto;
+}
+
+.cart_rating {
+	display: flex;
+}
+
+.btn-buy .btn {
+	width: 110px;
+	height: 35px;
+	background-color: #68d6f4;
+	border-radius: 7px;
+	color: white;
+}
+
+.container{
+	display:flex;
+}
+
+.left{
+	background-color:black;
+	height:115px;
+	width:115px;
+}
