--- a/src/components/ListProduct/styles.scss
+++ b/src/components/ListProduct/styles.scss
@@ -1,9 +1,21 @@
-.product-item{
-    display: flex;
+
+.product .product-item {
+	box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.06);
+	border-radius: 7px;
+
+	height:120px;
+	margin-bottom: 20px;
+	background-color: #fff;
+	position: relative;
+	margin-left:40px;
 }
 
-.cart{
-	height:115px;
+.product-item:last-child {
+	margin-right: 0;
+}
+
+.product-item:hover {
+	box-shadow: 0px 14px 20px rgba(0, 0, 0, 0.1), 0px 3px 8px rgba(0, 0, 0, 0.07);
 }
 
 .image_cart{
@@ -14,6 +26,14 @@
 	display: flex;
 }
 
+.info_product{
+	margin-top: 15px;
+}
+
+.card-body p{
+	margin-bottom:0;
+}
+
 .btn-buy .btn {
 	width: 110px;
 	height: 35px;
@@ -22,12 +42,25 @@
 	color: white;
 }
 
+.stock{
+	margin-left: auto;
+	margin-right: 80px;
+}
+
+.card-text{
+	width: 450px;
+}
+
+.Radio{
+	margin-right:25px;
+}
+
 .container{
 	display:flex;
 }
 
 .left{
 	background-color:black;
-	height:115px;
-	width:115px;
-}
+	height:290px;
+	width:290px;
+}	
