--- a/src/components/GridProduct/styles.scss
+++ b/src/components/GridProduct/styles.scss
@@ -1,117 +1,116 @@
+.product .product-item {
+  padding: 20px;
+  box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 7px;
+  margin-top: 16px;
+  height: 380px;
+  background-color: #fff;
+  position: relative;
+  margin-left: 40px;
+}
 
-  .product-item {
-    padding: 20px;
-    box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.06);
-    border-radius: 7px;
-    margin-right: 16px;
-    margin-top: 16px;
-    height: 380px;
-    background-color: #fff;
-    position: relative;
-  }
-  
-  .product-item:last-child {
-    margin-right: 0;
-  }
-  
-  .product-item:hover {
-    box-shadow: 0px 14px 20px rgba(0, 0, 0, 0.1), 0px 3px 8px rgba(0, 0, 0, 0.07);
+.product-item:last-child {
+  margin-right: 0;
+}
+
+.product-item:hover {
+  box-shadow: 0px 14px 20px rgba(0, 0, 0, 0.1), 0px 3px 8px rgba(0, 0, 0, 0.07);
+}
+
+.discount .price {
+  display: flex;
+  color: #dfdfdf;
+  margin-bottom: -4px;
+  position: relative;
+
+  &:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #fd6d6d;
+    position: absolute;
+    left: 0;
+    top: calc(50% - 1px);
   }
 
-  .discount .price {
-    display: flex;
-    color: #dfdfdf;
-    margin-bottom: -4px;
-    position: relative;
-  
-    &:after {
-      content: "";
-      display: block;
-      width: 100%;
-      height: 1px;
-      background-color: #fd6d6d;
-      position: absolute;
-      left: 0;
-      top: calc(50% - 1px);
-    }
-  
-    .image_sale {
-      top: 2px;
-    }
+  .image_sale {
+    top: 2px;
   }
-  
-  .discount .sale {
-    color: #fd6d6d;
-    font-weight: bold;
-    font-size: 16px;
-  }
-  
-  .discount .sale_discount {
-    font-size: 14px;
-  }
-  
-  .image_sale,
-  .image_price {
-    padding-left: 7px;
-    position: relative;
-    top: -2px;
-  }
-  
-  .price {
-    font-weight: bold;
-    font-size: 16px;
-  }
-  
-  .card-rating {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-  }
-  
-  .card-text {
-    margin-bottom: auto;
-    color: #2b2d36;
-  }
-  
-  .product-item .weight-product {
-    margin: 0;
-    margin-bottom: 20px;
-  }
-  
-  input[type="radio"] {
-    display: none;
-  }
-  
-  input[type="radio"] + label span {
-    display: inline-block;
-    width: 19px;
-    height: 19px;
-    vertical-align: middle;
-    background: url("/image/print-icon-empty.png") left top no-repeat;
-    cursor: pointer;
-  }
-  
-  input[type="radio"]:checked + label span {
-    background: url("/image/radiobutton-selected.png") left top no-repeat;
-  }
-  
-  input[type="radio"]:checked + label {
-    color: red;
-  }
-  
-  .price {
-    margin-left: 0;
-    bottom: 0;
-  }
-  
-  .btn-buy {
-    margin-left: 60px;
-  }
-  
-  .btn {
-    width: 110px;
-    height: 35px;
-    background-color: #68d6f4;
-    border-radius: 7px;
-    color: white;
-  }
+}
+
+.sale_price {
+  display: flex;
+}
+
+.discount .sale {
+  color: #fd6d6d;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.discount .sale_discount {
+  font-size: 14px;
+}
+
+.image_sale,
+.image_price {
+  padding-left: 7px;
+  position: relative;
+  top: -2px;
+}
+
+.price {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.card-rating {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.card-text {
+  margin-bottom: auto;
+  color: #2b2d36;
+}
+
+.product-item .weight-product {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"] + label span {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  vertical-align: middle;
+  background: url("/image/print-icon-empty.png") left top no-repeat;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + label span {
+  background: url("/image/radiobutton-selected.png") left top no-repeat;
+}
+
+input[type="radio"]:checked + label {
+  color: red;
+}
+
+.price {
+  margin-left: 0;
+  bottom: 0;
+}
+
+.btn {
+  width: 110px;
+  height: 35px;
+  background-color: #68d6f4;
+  border-radius: 7px;
+  color: white;
+}
