--- a/src/components/ListProduct/styles.scss
+++ b/src/components/ListProduct/styles.scss
@@ -1,66 +1,73 @@
-
-.product .product-item {
-	box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.06);
-	border-radius: 7px;
-
-	height:120px;
-	margin-bottom: 20px;
-	background-color: #fff;
-	position: relative;
-	margin-left:40px;
+.product .product_item_list {
+  box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.03), 0px 2px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 7px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  position: relative;
+  margin-left: 40px;
 }
 
-.product-item:last-child {
-	margin-right: 0;
+.product_item_list:last-child {
+  margin-right: 0;
 }
 
-.product-item:hover {
-	box-shadow: 0px 14px 20px rgba(0, 0, 0, 0.1), 0px 3px 8px rgba(0, 0, 0, 0.07);
+.product_item_list:hover {
+  box-shadow: 0px 14px 20px rgba(0, 0, 0, 0.1), 0px 3px 8px rgba(0, 0, 0, 0.07);
 }
 
-.image_cart{
-	margin:auto;
+.image_cart {
+  margin: auto;
 }
 
 .cart_rating {
-	display: flex;
+  display: flex;
 }
 
-.info_product{
-	margin-top: 15px;
+.info_product {
+  margin-top: 15px;
 }
 
-.card-body p{
-	margin-bottom:0;
+.card-body p {
+  margin-bottom: 0;
+}
+
+.info_product .discount,
+.info_product .cost {
+  margin: auto;
+}
+
+.info_product .btn-buy {
+  margin-left: 0;
 }
 
 .btn-buy .btn {
-	width: 110px;
-	height: 35px;
-	background-color: #68d6f4;
-	border-radius: 7px;
-	color: white;
+  width: 110px;
+  height: 35px;
+  background-color: #68d6f4;
+  border-radius: 7px;
+  color: white;
 }
 
-.stock{
-	margin-left: auto;
-	margin-right: 80px;
+.stock {
+  margin-left: 110px;
+  margin-right: auto;
 }
 
-.card-text{
-	width: 450px;
+.card-text {
+  width: 450px;
 }
 
-.Radio{
-	margin-right:25px;
+.Radio {
+  margin-right: 25px;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
-.container{
-	display:flex;
+.container {
+  display: flex;
 }
 
-.left{
-	background-color:black;
-	height:290px;
-	width:290px;
-}	
+.left {
+  background-color: black;
+}
