--- a/src/pages/CatalogPage/styles.scss
+++ b/src/pages/CatalogPage/styles.scss
@@ -28,3 +28,13 @@
   border: none;
   margin: 5px;
 }
+
+.grid {
+  cursor: pointer;
+  margin: 5px;
+}
+
+.list {
+  cursor: pointer;
+  margin: 5px;
+}
