--- a/src/components/Accordeon/styles.scss
+++ b/src/components/Accordeon/styles.scss
@@ -1,15 +1,22 @@
 .Accordeon .AccordeonItem__wrapper {
-  margin-bottom: 2px;
   border: none;
 }
 
 .AccordeonItem {
   box-shadow: 0 4px 11px rgba(0, 0, 0, 0.03), 0 2px 4px rgba(0, 0, 0, 0.06);
   transition: height 0.3s ease;
+  overflow: hidden;
+
   &__title {
-    background-image: url("/image/background_accordeon.svg");
+    background-image: url("/image/pattern-2.jpg");
     height: 50px;
     color: white;
     font-weight: 500;
+  }
+
+  &__text {
+    display: flex;
+    width: 100%;
+    height: 100%;
   }
 }
