--- a/src/components/GridProducts/styles.scss
+++ b/src/components/GridProducts/styles.scss
@@ -18,7 +18,7 @@
 }
 
 .discount .price {
-  display: flex;
+  display: inline-flex;
   color: #dfdfdf;
   margin-bottom: -4px;
   position: relative;
