--- a/src/components/ItemDetails/styles.scss
+++ b/src/components/ItemDetails/styles.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   width: 176px;
   height: 36px;
+  cursor: pointer;
   &:hover,
   &--checked {
     box-shadow: 0px 7px 11px rgba(0, 0, 0, 0.03),
@@ -16,7 +17,7 @@
     position: relative;
 
     &:after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: calc(50% + 2px);
